<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_dark_blue"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="661dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnRegisterContact"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/white"
            android:text="@string/btnRegisterContact"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDialToCall"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/black"
            android:text="@string/btnDialToCall"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnRecogizeObject"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/white"
            android:text="@string/btnRecognizeObject"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnRecogizeText"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/black"
            android:text="@string/btnRecognizeText"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnVoiceAssistant"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/white"
            android:text="@string/btnVoiceAssistant"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnExitApp"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/black"
            android:text="@string/btnExitApplication"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>