<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_light_blue"
    tools:context=".DialToCall">

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:hint="@string/pleaseEnterPhoneNumber"
        android:inputType="phone"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/light_yellow"
            android:text="@string/four"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/light_yellow"
            android:text="@string/six"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/light_yellow"
            android:text="@string/eight"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginBottom="112dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAsterisk"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/light_yellow"
            android:text="@string/star"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btnHash"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/light_yellow"
            android:text="@string/hash"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/light_yellow"
            android:text="@string/two"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="102sp"
            android:layout_weight="1"
            android:background="@color/dark_blue"
            app:srcCompat="@drawable/ic_back_foreground" />

        <ImageButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="102sp"
            android:layout_weight="1"
            android:background="@color/transparent"
            app:srcCompat="@drawable/ic_call_foreground" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="102sp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="45sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>